# payroll-extract

./: .gitignore  README.md  pyproject.toml  requirements-prod.txt  requirements.txt  start.sh
app/: config.py  container.py  main.py
app/api/v1/routers/: payroll_router.py
app/application/: payroll_service.py
app/core/entities/: payroll.py
app/core/interfaces/: payroll_repository_interface.py
app/core/use_cases/: process_payroll_use_case.py
app/infrastructure/database/: payroll_repository.py  prisma_client.py
app/modules/payroll-extract/: README.md  main.py
app/modules/payroll-extract/domain/: __init__.py  employee.py  money.py  payroll.py  payroll_period.py
app/modules/payroll-extract/exporters/: __init__.py  csv_exporter.py  json_exporter.py  payroll_exporter.py
app/modules/payroll-extract/parsers/: __init__.py  date_parser.py  employee_parser.py  money_parser.py  pdf_parser.py  text_line.py  text_parser.py
app/modules/payroll-extract/repositories/: __init__.py  payroll_repository.py  sqlite_repository.py
app/modules/payroll-extract/services/: __init__.py  payroll_service.py
payroll/src-tauri/: Cargo.toml
prisma/: schema.prisma
